--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,156 @@
 @import "./css/styles/style.css";
 @import "./css/colors/scheme-01.css";
 @import "./css/styles/coloring.css";
+
+/* Skeleton Loading Animation */
+@keyframes pulse {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+/* Item Details Styling */
+.item__details--flex-row {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  margin-bottom: 20px;
+}
+
+.item__details--margin-right {
+  margin-right: 40px;
+}
+
+.item__details--author {
+  display: flex;
+  align-items: center;
+  margin-bottom: 15px;
+}
+
+.item__details--author__avatar {
+  margin-right: 10px;
+}
+
+.item__details--author__avatar img {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.item__details--author__info {
+  flex: 1;
+}
+
+.item__details--author__info a {
+  color: #333;
+  text-decoration: none;
+  font-weight: 500;
+}
+
+.item__details--author__info a:hover {
+  color: #007bff;
+}
+
+.item__details--tab {
+  margin-top: 20px;
+}
+
+.item__details--tab__content {
+  margin-bottom: 20px;
+}
+
+.item__details--spacer {
+  height: 40px;
+}
+
+.item__details--price {
+  display: flex;
+  align-items: center;
+  margin-top: 10px;
+}
+
+.item__details--price img {
+  width: 20px;
+  height: 20px;
+  margin-right: 8px;
+}
+
+.item__details--price span {
+  font-size: 18px;
+  font-weight: bold;
+  color: #333;
+}
+
+/* Hot Collections Carousel Styles */
+.hot__collections--carousel {
+  position: relative;
+  padding: 0 30px;
+}
+
+.hot__collections--carousel .owl-nav {
+  position: absolute;
+  top: calc(50% - 30px);
+  transform: translateY(-50%);
+  width: 100%;
+  pointer-events: none;
+}
+
+.hot__collections--carousel .owl-nav .owl-prev,
+.hot__collections--carousel .owl-nav .owl-next {
+  position: absolute;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  background: transparent !important;
+  color: #333;
+  font-size: 16px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  line-height: 1;
+  box-shadow: none !important;
+  transition: all 0.3s ease;
+  pointer-events: auto;
+  transform: translateY(0px);
+  border: none !important;
+  padding: 0 !important;
+  margin: 0;
+  vertical-align: middle;
+}
+
+.hot__collections--carousel .owl-nav .owl-prev:hover,
+.hot__collections--carousel .owl-nav .owl-next:hover {
+  transform: translateY(0px) scale(1.2);
+}
+
+.hot__collections--carousel .owl-nav .owl-prev {
+  left: -35px;
+}
+
+.hot__collections--carousel .owl-nav .owl-next {
+  right: 25px;
+}
+
+.hot__collections--carousel .item {
+  padding: 0;
+}
+
+.hot__collections--carousel .owl-nav .owl-prev i,
+.hot__collections--carousel .owl-nav .owl-next i {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  line-height: 1;
+  margin: 0;
+  padding: 0;
+}
