--- a/src/index.css
+++ b/src/index.css
@@ -46,11 +46,31 @@
   margin-right: 10px;
 }
 
+.item__details--author__avatar {
+  position: relative;
+  margin-right: 10px;
+}
+
 .item__details--author__avatar img {
   width: 50px;
   height: 50px;
   border-radius: 50%;
   object-fit: cover;
+}
+
+.item__details--author__avatar .fa-check {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  background: #7c3aed;
+  color: white;
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 10px;
 }
 
 .item__details--author__info {
